tmp commit: move logging up a level